<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutConstraint_AddTechnicianPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.view.AddTechnician">

    <LinearLayout
        android:id="@+id/add_Technician_Toolbar_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_Technician_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00F"
            app:title="@string/add_technician"
            app:titleTextColor="#FFF">

        </android.support.v7.widget.Toolbar>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayout_AddTechnicianPage_TechName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/add_Technician_Toolbar_Layout">

        <EditText
            android:id="@+id/editText_AddTechnicianPage_TechName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/technician_name"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayout_AddTechnicianPage_TechEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/textLayout_AddTechnicianPage_TechName">

        <EditText
            android:id="@+id/editText_AddTechnicianPage_TechEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayout_AddTechnicianPage_TechPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:counterMaxLength="10"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/textLayout_AddTechnicianPage_TechEmail">

        <EditText
            android:id="@+id/editText_AddTechnicianPage_TechPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayout_AddTechnicianPage_TechJobProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/textLayout_AddTechnicianPage_TechPhoneNo">

        <EditText
            android:id="@+id/editText_AddTechnicianPage_TechJobProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_profile"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttton_AddTechnicianPage_AddTech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_button"
        android:text="ADD"
        android:textColor="#FFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/textLayout_AddTechnicianPage_TechJobProfile"
        app:layout_constraintTop_toBottomOf="@id/textLayout_AddTechnicianPage_TechPasswrod" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayout_AddTechnicianPage_TechPasswrod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/textLayout_AddTechnicianPage_TechJobProfile"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edittext_AddTechnicianPage_TechPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>